; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_file.c_ecryptfs_fasync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_file.c_ecryptfs_fasync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.file*, i32)* @ecryptfs_fasync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecryptfs_fasync(i32 %0, %struct.file* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.file*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.file* %1, %struct.file** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  store %struct.file* null, %struct.file** %8, align 8
  %9 = call i32 (...) @lock_kernel()
  %10 = load %struct.file*, %struct.file** %5, align 8
  %11 = call %struct.file* @ecryptfs_file_to_lower(%struct.file* %10)
  store %struct.file* %11, %struct.file** %8, align 8
  %12 = load %struct.file*, %struct.file** %8, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %35

16:                                               ; preds = %3
  %17 = load %struct.file*, %struct.file** %8, align 8
  %18 = getelementptr inbounds %struct.file, %struct.file* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = bitcast {}** %20 to i32 (i32, %struct.file*, i32)**
  %22 = load i32 (i32, %struct.file*, i32)*, i32 (i32, %struct.file*, i32)** %21, align 8
  %23 = icmp ne i32 (i32, %struct.file*, i32)* %22, null
  br i1 %23, label %24, label %35

24:                                               ; preds = %16
  %25 = load %struct.file*, %struct.file** %8, align 8
  %26 = getelementptr inbounds %struct.file, %struct.file* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = bitcast {}** %28 to i32 (i32, %struct.file*, i32)**
  %30 = load i32 (i32, %struct.file*, i32)*, i32 (i32, %struct.file*, i32)** %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = load %struct.file*, %struct.file** %8, align 8
  %33 = load i32, i32* %6, align 4
  %34 = call i32 %30(i32 %31, %struct.file* %32, i32 %33)
  store i32 %34, i32* %7, align 4
  br label %35

35:                                               ; preds = %24, %16, %3
  %36 = call i32 (...) @unlock_kernel()
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local %struct.file* @ecryptfs_file_to_lower(%struct.file*) #1

declare dso_local i32 @unlock_kernel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
